Proper async, add mirrors of existing command code, move to wpilibj3 package
Remove resources-as-executors